added user checks for create endpoiunt
